src/style.css
:root {
  --dsg-border-color: #e8ebed;
  --dsg-selection-border-color: rgb(69, 128, 230);
  --dsg-selection-border-radius: 2px;
  --dsg-selection-border-width: 2px;
  --dsg-selection-background-color: rgba(69, 128, 230, 0.04);
  --dsg-selection-disabled-border-color: #9da6ab;
  --dsg-selection-disabled-background-color: rgba(0, 0, 0, 0.04);
  --dsg-corner-indicator-width: 10px;
  --dsg-header-text-color: rgb(157, 166, 171);
  --dsg-header-active-text-color: black;
  --dsg-cell-background-color: white;
  --dsg-cell-disabled-background-color: rgb(250, 250, 250);
  --dsg-transition-duration: 0.1s;
  --dsg-expand-rows-indicator-width: 10px;
  --dsg-scroll-shadow-width: 7px;
  --dsg-scroll-shadow-color: rgba(0, 0, 0, 0.2);
}

.dsg-container {
  border: solid 1px var(--dsg-border-color);
  border-top: none;
  border-left: none;
  cursor: cell;
  user-select: none;
  box-sizing: border-box;
  color: black;
  background: white;
  position: relative;
  width: 100%;
  overflow: auto;
  will-change: transform;
  direction: ltr;
}

.dsg-corner-indicator {
  margin: auto;
  width: 0;
  border-bottom: solid var(--dsg-corner-indicator-width)
    var(--dsg-header-text-color);
  border-left: solid var(--dsg-corner-indicator-width) transparent;
}

.dsg-row {
  position: absolute;
  top: 0;
  left: 0;
  background: var(--dsg-cell-background-color);
  box-shadow: 0 1px var(--dsg-border-color) inset;
}

.dsg-row-header {
  position: sticky;
  top: 0;
  z-index: 40;
}

.dsg-cell {
  display: flex;
  align-items: center;
  box-sizing: border-box;
  background: var(--dsg-cell-background-color);
  border: solid 1px var(--dsg-border-color);
  border-bottom: none;
  border-right: none;
  box-shadow: 1px 1px var(--dsg-border-color);
  position: absolute;
  top: 0;
  height: 100%;
  z-index: 1;
  pointer-events: auto;
}

.dsg-hidden-cell {
  display: none;
}

.dsg-cell-sticky-right {
  position: sticky;
  right: 0;
  z-index: 30;
  margin-left: auto;
  transform: translateY(-100%);
}

.dsg-cell-sticky-left {
  position: sticky !important;
  z-index: 35;
  transform: translateY(-100%) !important;
  box-shadow: 1px 0 var(--dsg-border-color);
  pointer-events: auto !important;
}

.dsg-cell-header.dsg-cell-sticky-left {
  z-index: 41;
}

.dsg-cell-disabled {
  background: var(--dsg-cell-disabled-background-color);
}

.dsg-cell-header,
.dsg-cell-gutter {
  color: var(--dsg-header-text-color);
  transition: color var(--dsg-transition-duration);
  box-shadow: none;
}

.dsg-cell-header-container {
  padding: 0 10px;
  line-height: 15px;
}

.dsg-cell-header.dsg-cell-gutter {
  box-shadow: 1px 0 var(--dsg-border-color), 0 1px var(--dsg-border-color);
}

.dsg-cell-header.dsg-cell-sticky-right {
  box-shadow: 0 1px var(--dsg-border-color);
}

.dsg-cell-gutter {
  position: sticky;
  left: 0;
  padding: 0 5px;
  justify-content: center;
  z-index: 30;
  height: 100%;
}

.dsg-cell-header-active,
.dsg-cell-gutter-active {
  color: var(--dsg-header-active-text-color);
}

.dsg-active-cell,
.dsg-selection-rect {
  position: absolute;
  border: solid var(--dsg-selection-border-width)
    var(--dsg-selection-border-color);
  box-sizing: border-box;
  border-radius: var(--dsg-selection-border-radius);
  transition: all var(--dsg-transition-duration);
  pointer-events: none;
  z-index: 50;
}

.dsg-active-cell-focus {
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

.dsg-active-cell-disabled,
.dsg-selection-rect-disabled {
  border-color: var(--dsg-selection-disabled-border-color);
}

.dsg-selection-rect {
  background: var(--dsg-selection-background-color);
}

.dsg-selection-rect-disabled {
  background: var(--dsg-selection-disabled-background-color);
}

.dsg-scrollable-view-container {
  position: absolute;
  pointer-events: none;
  top: 0;
  left: 0;
}

.dsg-scrollable-view {
  position: sticky;
  z-index: 10;
  box-sizing: border-box;
  border: solid 1px var(--dsg-border-color);
  border-bottom: none;
  border-right: none;
  transition: box-shadow 0.3s;
  box-shadow: 0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset;
}

.dsg-scrollable-view-t {
  box-shadow: 0 var(--dsg-scroll-shadow-width) var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset;
}

.dsg-scrollable-view-r {
  box-shadow: 0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    calc(0px - var(--dsg-scroll-shadow-width)) 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset,
    0 0 var(--dsg-scroll-shadow-width)
      calc(0px - var(--dsg-scroll-shadow-width)) var(--dsg-scroll-shadow-color)
      inset;
}
/* ... */

